# pylaragon

./: main.py  pyproject.toml
config/: services.json
gui/: main_window.py
services/: apache_manager.py  mysql_manager.py  php_manager.py  service_manager.py  ssl_manager.py
www/: index.php
